+Refactoring +Encapsulating j48 into separate webservice +Attempt to split CSVConverter into conversion-generating_configuration